--- a/package.json
+++ b/package.json
@@ -15,5 +15,17 @@
   "bugs": {
     "url": "https://github.com/hossam-nasr/func-node-decorators-prototype/issues"
   },
-  "homepage": "https://github.com/hossam-nasr/func-node-decorators-prototype#readme"
+  "homepage": "https://github.com/hossam-nasr/func-node-decorators-prototype#readme",
+  "dependencies": {
+    "@azure/functions": "^3.2.0"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.7.18",
+    "chai": "^4.3.6",
+    "func-cli-nodejs-v4": "^4.0.4764",
+    "mocha": "^10.0.0",
+    "typescript": "^4.8.3"
+  }
 }
