--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es6",
+        "experimentalDecorators": true,
         "outDir": "dist",
         "rootDir": ".",
         "sourceMap": true,
