--- a/package.json
+++ b/package.json
@@ -27,9 +27,15 @@
     "@types/chai": "^4.3.3",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.7.18",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
     "chai": "^4.3.6",
+    "eslint": "^8.26.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.1.1",
     "func-cli-nodejs-v4": "^4.0.4764",
     "mocha": "^10.0.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.4"
   }
 }
