--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "homepage": "https://github.com/hossam-nasr/func-node-decorators-prototype#readme",
     "dependencies": {
         "@azure/functions": "^4.0.0-alpha.3",
-        "azure-functions-decorators-typescript": "^1.0.0-alpha.1"
+        "azure-functions-decorators-typescript": "^1.0.0-alpha.1",
+        "undici": "5.10"
     },
     "devDependencies": {
         "@types/chai": "^4.3.3",
         "@types/mocha": "^9.1.1",
-        "@types/node": "^18.7.18",
+        "@types/node": "^18.11.5",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
         "chai": "^4.3.6",
         "eslint": "^8.26.0",
